# anki-hanzi-gcloud-run

./: .gitignore  .gitmodules  poetry_scripts.py  pyproject.toml
src/: main.py
