[project]
name = "anki-hanzi-gcloud-run"
version = "0.1.0"
description = ""
authors = [
    {name = "David Sauerwein",email = "david@sauerwein.xyz"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "anki_hanzi_gcloud_run", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
