[project]
name = "anki-hanzi-gcloud-run"
version = "0.1.0"
description = ""
authors = [
    {name = "David Sauerwein",email = "david@sauerwein.xyz"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "functions-framework (>=3.8.2,<4.0.0)",
    "flask-httpauth (>=4.8.0,<5.0.0)"
]

[tool.poetry]
packages = [{include = "anki_hanzi_gcloud_run", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
